<resources>
    <string name="app_name">Smart Parking</string>
    <string name="title_activity_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="select_date">Select Date:</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="make_nbooking">Make \nBooking</string>
    <string name="view_nhistory">View \nHistory</string>
    <string name="settings">Settings</string>
    <string name="enter">When do you wish to arrive?</string>
    <string name="exit">When do you wish to exit?</string>
    <string name="search">Search</string>
</resources>