<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loggedin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:foregroundTint="#F6EFEF"
    tools:context=".activities.ProfileActivity">

  <TextView
      android:id="@+id/welcome"
      android:layout_width="wrap_content"
      android:layout_height="19dp"
      android:layout_margin="32dp"
      android:layout_marginStart="32dp"
      android:textColor="#FDFDFD"
      android:textSize="16sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.0" />

  <android.widget.Button
      android:id="@+id/book"
      android:layout_width="100dp"
      android:layout_height="100dp"
      android:layout_marginTop="164dp"
      android:background="@drawable/btn_rounded_white"
      android:backgroundTint="#F8F8F8"
      android:text="@string/make_nbooking"
      android:textColor="#130D0D"
      android:textSize="12sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <android.widget.Button
      android:id="@+id/history"
      android:layout_width="100dp"
      android:layout_height="100dp"
      android:layout_marginTop="312dp"
      android:background="@drawable/btn_rounded_white"
      android:backgroundTint="#F8F8F8"
      android:text="@string/view_nhistory"
      android:textColor="#1C1414"
      android:textSize="12sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <android.widget.Button
      android:id="@+id/settings"
      android:layout_width="100dp"
      android:layout_height="100dp"
      android:layout_marginTop="460dp"
      android:background="@drawable/btn_rounded_white"
      android:backgroundTint="#F8F8F8"
      android:text="@string/settings"
      android:textColor="#100B0B"
      android:textSize="12sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>